--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25692,6 +25692,22 @@ select {
   table-layout: fixed;
 }
 
+.hover\:table-auto:hover {
+  table-layout: auto;
+}
+
+.hover\:table-fixed:hover {
+  table-layout: fixed;
+}
+
+.focus\:table-auto:focus {
+  table-layout: auto;
+}
+
+.focus\:table-fixed:focus {
+  table-layout: fixed;
+}
+
 .text-left {
   text-align: left;
 }
@@ -57649,6 +57665,22 @@ select {
     table-layout: fixed;
   }
 
+  .sm\:hover\:table-auto:hover {
+    table-layout: auto;
+  }
+
+  .sm\:hover\:table-fixed:hover {
+    table-layout: fixed;
+  }
+
+  .sm\:focus\:table-auto:focus {
+    table-layout: auto;
+  }
+
+  .sm\:focus\:table-fixed:focus {
+    table-layout: fixed;
+  }
+
   .sm\:text-left {
     text-align: left;
   }
@@ -89538,6 +89570,22 @@ select {
   }
 
   .md\:table-fixed {
+    table-layout: fixed;
+  }
+
+  .md\:hover\:table-auto:hover {
+    table-layout: auto;
+  }
+
+  .md\:hover\:table-fixed:hover {
+    table-layout: fixed;
+  }
+
+  .md\:focus\:table-auto:focus {
+    table-layout: auto;
+  }
+
+  .md\:focus\:table-fixed:focus {
     table-layout: fixed;
   }
 
@@ -121433,6 +121481,22 @@ select {
     table-layout: fixed;
   }
 
+  .lg\:hover\:table-auto:hover {
+    table-layout: auto;
+  }
+
+  .lg\:hover\:table-fixed:hover {
+    table-layout: fixed;
+  }
+
+  .lg\:focus\:table-auto:focus {
+    table-layout: auto;
+  }
+
+  .lg\:focus\:table-fixed:focus {
+    table-layout: fixed;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -153325,6 +153389,22 @@ select {
     table-layout: fixed;
   }
 
+  .xl\:hover\:table-auto:hover {
+    table-layout: auto;
+  }
+
+  .xl\:hover\:table-fixed:hover {
+    table-layout: fixed;
+  }
+
+  .xl\:focus\:table-auto:focus {
+    table-layout: auto;
+  }
+
+  .xl\:focus\:table-fixed:focus {
+    table-layout: fixed;
+  }
+
   .xl\:text-left {
     text-align: left;
   }
@@ -185214,6 +185294,22 @@ select {
   }
 
   .\32xl\:table-fixed {
+    table-layout: fixed;
+  }
+
+  .\32xl\:hover\:table-auto:hover {
+    table-layout: auto;
+  }
+
+  .\32xl\:hover\:table-fixed:hover {
+    table-layout: fixed;
+  }
+
+  .\32xl\:focus\:table-auto:focus {
+    table-layout: auto;
+  }
+
+  .\32xl\:focus\:table-fixed:focus {
     table-layout: fixed;
   }
 
