--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1087,6 +1087,9 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
+.static {
+	position: static;
+}
 .fixed {
 	position: fixed;
 }
@@ -1127,6 +1130,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.mx-4 {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
 .mx-3 {
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
@@ -1139,9 +1146,13 @@ select {
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
 }
-.mx-4 {
-	margin-left: 1rem;
-	margin-right: 1rem;
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1215,14 +1226,14 @@ select {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
-.mb-5 {
-	margin-bottom: 1.25rem;
+.-mt-px {
+	margin-top: -1px;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.-mt-px {
-	margin-top: -1px;
+.mb-5 {
+	margin-bottom: 1.25rem;
 }
 .block {
 	display: block;
@@ -1584,6 +1595,9 @@ select {
 }
 .p-3 {
 	padding: 0.75rem;
+}
+.p-4 {
+	padding: 1rem;
 }
 .px-4 {
 	padding-left: 1rem;
