--- a/public/css/generalStyles.css
+++ b/public/css/generalStyles.css
@@ -93,9 +93,9 @@ a {
     border-radius: 3px !important;
 }
 
-.invisible{
+/*.invisible{
     display: hide;
-}
+}*/
 
 .h-divisor {
     opacity: 1 !important;
@@ -204,4 +204,27 @@ a {
     100% {
         left: 0%;
      }
+}
+
+
+/*Para cambiar*/
+@media screen and (min-width: 1px) and (max-width: 930px){
+
+.texto-button{
+    display: none !important;
+    margin-bottom: 0 !important;
+}
+
+}
+
+@media screen and (min-width: 931px) and (max-width: 2000px){
+
+.button-responsive{
+    border-radius: 3px !important;
+}
+
+.texto-button{
+    margin-bottom: 0 !important;
+}
+
 }
