--- a/public/css/generalStyles.css
+++ b/public/css/generalStyles.css
@@ -93,10 +93,6 @@ a {
     border-radius: 3px !important;
 }
 
-/*.invisible{
-    display: hide;
-}*/
-
 .h-divisor {
     opacity: 1 !important;
     height: 0.2rem !important;
@@ -206,6 +202,12 @@ a {
      }
 }
 
+.marco-icono{
+    border-radius: 50% !important;
+    background-color: var(--secondary-blue) !important;
+    color:  white !important;
+}
+
 
 /*Para cambiar*/
 @media screen and (min-width: 1px) and (max-width: 930px){
@@ -218,10 +220,6 @@ a {
 }
 
 @media screen and (min-width: 931px) and (max-width: 2000px){
-
-.button-responsive{
-    border-radius: 3px !important;
-}
 
 .texto-button{
     margin-bottom: 0 !important;
